5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1723_2498.log
== TEST (2019-05-09 11:19:48) 
-- CODE:
na = int(input("Numero de habitantes cidade A:"))
nb = int(input("Numero de habitantes cidade B:"))
pa = float(input("Porcentagem de crescimento populacional cidade A:"))
pb = float(input("Porcentagem de crescimento populacional cidade B:"))

na = ha
nb = hb

while(na<=nb):
	ha = na * pa/100
	hb = nb * pb/100
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    na = ha
NameError: name 'ha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:26:59) 
-- CODE:
ha = int(input("Numero de habitantes cidade A:"))
hb = int(input("Numero de habitantes cidade B:"))
pa = float(input("Porcentagem de crescimento populacional cidade A:"))
pb = float(input("Porcentagem de crescimento populacional cidade B:"))

perca = pa/100
percb = pb/100

ano = 0

while(ha<=hb):
	ha = ha *(ha*preca)
	hb = hb *(hb*precb)
	ano = ano+1
print(ano)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha *(ha*preca)
NameError: name 'preca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:27:18) 
-- CODE:
ha = int(input("Numero de habitantes cidade A:"))
hb = int(input("Numero de habitantes cidade B:"))
pa = float(input("Porcentagem de crescimento populacional cidade A:"))
pb = float(input("Porcentagem de crescimento populacional cidade B:"))

perca = pa/100
percb = pb/100

ano = 0

while(ha<=hb):
	ha = ha *(ha*preca)
	hb = hb *(hb*precb)
	ano = ano+1
print(ano)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha *(ha*preca)
NameError: name 'preca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:27:38) 
-- CODE:
ha = int(input("Numero de habitantes cidade A:"))
hb = int(input("Numero de habitantes cidade B:"))
pa = float(input("Porcentagem de crescimento populacional cidade A:"))
pb = float(input("Porcentagem de crescimento populacional cidade B:"))

perca = pa/100
percb = pb/100

ano = 0

while(ha<=hb):
	ha = ha + (ha*preca)
	hb = hb + (hb*precb)
	ano = ano+1
print(ano)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ha = ha + (ha*preca)
NameError: name 'preca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:28:02) 
-- CODE:
ha = int(input("Numero de habitantes cidade A:"))
hb = int(input("Numero de habitantes cidade B:"))
pa = float(input("Porcentagem de crescimento populacional cidade A:"))
pb = float(input("Porcentagem de crescimento populacional cidade B:"))

perca = pa/100
percb = pb/100

ano = 0

while(ha<=hb):
	ha = ha + (ha*perca)
	hb = hb + (hb*percb)
	ano = ano+1
print(ano)	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:28:14) 
-- CODE:
ha = int(input("Numero de habitantes cidade A:"))
hb = int(input("Numero de habitantes cidade B:"))
pa = float(input("Porcentagem de crescimento populacional cidade A:"))
pb = float(input("Porcentagem de crescimento populacional cidade B:"))

perca = pa/100
percb = pb/100

ano = 0

while(ha<=hb):
	ha = ha + (ha*perca)
	hb = hb + (hb*percb)
	ano = ano+1
print(ano)	
-- EXECUTION TIME:
0.208887
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
